# ArrowProject

./: .gitignore  .gitmodules  CONTRIBUTING.md  NOTICE  README.md  pyproject.toml  requirements.txt  run_arrow.py  setup.py
.github/workflows/: run_airtable.yml
Arrow/: TODOs.py  __init__.py  main.py
Arrow/Arrow/: TODOs.py  main.py
Arrow/Arrow_API/: __init__.py  flows.py
Arrow/Internal_content/: __init__.py
Arrow/Output/: automated_linker.ld  generation.json  memory_usage.json  test.asm  test.elf  test.elf.objdump
Arrow/Scripts/: preruncmd.csh  setup_pycharm.py
Arrow/Utils/: logger_management.py  seed_management.py  statistics_managment.py
Arrow_API/: __init__.py  flows.py  resources.py
Arrow_API/resources/: __init__.py  memory_manager.py  register_manager.py  register_manager_API.py
Docs/: CONTRIBUTING.md  setup_basic.md  setup_pycharm.md
Internal_content/: __init__.py
Internal_content/scenarios/: __init__.py
Internal_content/templates/: direct_template.py  dispatch_template.py  testing_template.py
Scripts/: arm_xml_to_json.py  preruncmd.csh  setup.py  setup_pycharm.py
Tool/asm_blocks/: __init__.py  asm_unit.py  data_unit.py
Tool/asm_libraries/: asm_logger.py  end_test.py  memory_access.py  stack.py  store_value.py  switch_el.py
Tool/decorators/: __init__.py  ingredient_decorator.py
Tool/exception_management/: __init__.py
Tool/frontend/: AR_API.py  asm_logger.py  sources_API.py
Tool/generation_management/: generate.py  (+7 more)
Utils/: arg_parser.py  configuration_management.py  enums.py  logger_management.py  statistics_managment.py
(+235 files in other folders)
