
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["Arrow", "Arrow.*"]

[project]
readme.content-type = "text/markdown"
readme.file = "README.md"
name = "Arrow"
version = "0.1.2"
description = "An architecture-agnostic stimuli generator for architectural and micro-architectural contexts"
authors = [
    { name = "Zohar Buchris", email = "szoharbu@gmail.com" },
    { name = "Kenneth Umenthum", email = "kenny@aheadcomputing.com" },
]
license = "GPL-3.0-only"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
urls = { "Homepage" = "https://github.com/szoharbu/ArrowProject.git" }

dependencies = [
    "requests",
    "numpy",
    "streamlit",
    "peewee",
]

[project.scripts]
arrow = "Arrow.cli:main"
